fixed contact spacing

--- a/_sass/imports/_faq.scss
+++ b/_sass/imports/_faq.scss
@@ -63,8 +63,9 @@
 
   &__contact-image {
     width: 0;
-    flex: 0.2;
+    flex: 1;
     object-fit: cover;
+    max-height: 550px;
     @include smaller-than-tablet {
       max-height: 300px;
       width: initial;
